--- a/hw4/hw4/BLEU.ipynb
+++ b/hw4/hw4/BLEU.ipynb
@@ -55,11 +55,7 @@
       "metadata": {
         "id": "sSJMCf4GArLJ",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 54
-        },
-        "outputId": "a54b532d-c968-4bf8-e214-f351ea848355"
+        "colab": {}
       },
       "source": [
         "import string\n",
@@ -71,30 +67,9 @@
         "    seq = [i.translate(str.maketrans('','',string.punctuation)).lower() for i in seq]\n",
         "    return seq\n",
         "words = preprocessing(words)\n",
-        "print(words)"
-      ],
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "['the', 'olive', 'grove', 'is', 'a', 'pub', 'providing', 'indian', 'food', 'in', 'the', 'high', 'price', 'range', 'it', 'is', 'located', 'in', 'the', 'city', 'centre']\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "_X2A1XaoBFGo",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "def pn(src, tgt_list, n):\n",
-        "    ngram = ngrams(src, n)\n",
-        "    "
+        "# print(words)\n",
+        "for i in range(len(reference)):\n",
+        "    reference[i] = preprocessing(reference[i])"
       ],
       "execution_count": 0,
       "outputs": []
@@ -102,27 +77,167 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "t7V-7C5dftwp",
+        "id": "_X2A1XaoBFGo",
         "colab_type": "code",
-        "outputId": "e22c0506-f597-445a-80dd-baf072e742b7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "03c7eb04-b0ff-41d3-9714-f6f8cc7a1487"
       },
       "source": [
-        "ngram = [i for i in ngrams(words,1)]\n",
-        "unique_ngram = list(set(ngram))\n",
-        "print(len(ngram), len(unique_ngram))"
+        "from collections import Counter\n",
+        "def pn(src, tgt_list, n):\n",
+        "    counts = Counter(ngrams(src,n))\n",
+        "    max_counts = {}\n",
+        "    for i in tgt_list:\n",
+        "        reference_counts = Counter(ngrams(i,n))\n",
+        "        for ngram in counts:\n",
+        "            max_counts[ngram] = max(max_counts.get(ngram, 0), reference_counts[ngram])\n",
+        "\n",
+        "    clipped_counts = {ngram: min(count, max_counts[ngram]) for ngram, count in counts.items()}\n",
+        "    return sum(clipped_counts.values())/max(1, sum(counts.values())) \n",
+        "# pn(words, reference,100)==0"
       ],
-      "execution_count": 14,
+      "execution_count": 67,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "21 17\n"
-          ],
-          "name": "stdout"
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 67
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "t7V-7C5dftwp",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import math\n",
+        "def brevity_penalty(tgt_list, src_len):\n",
+        "    ref_lens = [len(i) for i in tgt_list]\n",
+        "    closest_ref_len = min(ref_lens, key = lambda ref_len: (abs(ref_len-src_len), ref_len))\n",
+        "    if closest_ref_len <= src_len:\n",
+        "        return 1\n",
+        "    else:\n",
+        "        return math.exp(1-src_len/closest_ref_len)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ujCOF5RH-ZzX",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "99c13da2-397a-41cd-c397-d2f454de391b"
+      },
+      "source": [
+        "def BLEU4(src, tgt_list):\n",
+        "    p1 = pn(src, tgt_list, 1)\n",
+        "    p2 = pn(src, tgt_list, 2)\n",
+        "    p3 = pn(src, tgt_list, 3)\n",
+        "    p4 = pn(src, tgt_list, 4)\n",
+        "    if p1 == 0:\n",
+        "        avg = 0\n",
+        "    elif p2 == 0:\n",
+        "        avg = p1\n",
+        "    elif p3 == 0:\n",
+        "        avg = (p1*p2)**0.5\n",
+        "    elif p4 == 0:\n",
+        "        avg = (p1*p1*p3)**(1/3)\n",
+        "    else:\n",
+        "        avg = (p1*p1*p3*p4)**(1/4)\n",
+        "    return avg*brevity_penalty(tgt_list, len(src))\n",
+        "BLEU4(words, reference)"
+      ],
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.2671309023262806"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 74
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Vqc3hWm4WT6c",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "60cd279d-f895-4c4b-93bc-e585757a80e8"
+      },
+      "source": [
+        " min(ref_lens, key = lambda ref_len: (abs(ref_len-9.5), ref_len))"
+      ],
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 62
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cy6i5mFN-LfD",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "2f66faf1-88f4-4e06-d272-70365626798a"
+      },
+      "source": [
+        "3**(1/3)"
+      ],
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.4422495703074083"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 68
         }
       ]
     },
