--- a/hw4/hw4_jq2282.md
+++ b/hw4/hw4_jq2282.md
@@ -12,6 +12,12 @@ The seq2seq model is consisted of two main parts: RNN encoder and RNN decoder. F
 
 ### 2.2. Error analysis
 
+Here I use the greedy decoding on the developement dataset to do the error analysis. Three kinds of erros I found are:
+
+1. The model mistakes two similar geographical attributes: "near[]" and "area[]". For example, the input includes 'area[city centre]' and 'near[The Sorrento]', and the prediction is "The mill is a coffee shop in in the sorrento..." which should be "in the city centre area near the Sorrento" instead.
+2. The model learnt the relationship between values of different attributes instead of the relationship between attribute and corresponding values. For example, the input includes 'name[The Wrestlers]', 'eatType[coffee shop]' and 'food[Chinese]' and the prediction is "The wrestlers is a coffee shop providing Indian food..." which should be "providing Chinese food". In fact, the training dataset contains examples of "The Wrestlers" providing "Chinese food". So the model picked "Chinese food" instead of "Indian food". 
+3. Repeated information. One example is: the input contains 'area[Portland Arms]' and the prediction is "Cotto is a coffee shop in the Portland Arms in Portland Arms". The greedy decoder outputs the word with highest probability and hence may not show the information correctly.
+
 
 
 ### 2.3. Beam search analysis
@@ -19,6 +25,20 @@ The seq2seq model is consisted of two main parts: RNN encoder and RNN decoder. F
 
 
 ### 2.4. What's wrong with BLEU?
+
+The problems with BLEU scores are:
+
+1. They tend to favor short translations even with brevity penalty.
+2. The predictions may not be fluent or correct in grammar or semantics.
+3. The performance may be over-estimated by the appearance of common words.
+4. The performance may be under-estimated because BLEU fails to recognize the synonyms or paraphrases.
+
+So BLEU may over- or under-estimate performance. In our case, since we use model generation, it tends to over-estimate performance more. Here are examples:
+
+1. The input is ('name[Fitzbillies]', 'eatType[coffee shop]', 'food[English]', 'priceRange[cheap]', 'customer rating[5 out of 5]', 'area[riverside]', 'familyFriendly[no]') and the prediction "Fitzbillies coffee shop in Riverside. It is not a coffee shop with a customer rating and is not family-friendly." got a BLEU score 0.49. It misused the "no" in "familyFriendly" in the "eatType" so the meaning is distorted. But BLEU could not figure it out.
+2. The input is ('name[Cocum]', 'eatType[coffee shop]', 'food[Chinese]', 'priceRange[less than £20]', 'customer rating[low]', 'familyFriendly[yes]') and the prediction "Cocum is a coffee shop serving Indian food and is less than £20." got a BLEU score 0.44. The prediction made mistakes and lost almost half of the information in the input due to the short length. But since most words in the prediction also appeared in the reference sentences, the BLEU score over-estimate the performance.
+
+The Benefits ot BLEU are: it's automated, quick and inexpensive. It is reported to be correlated well with human judgement. Although it has multiple problems, it is still a widely used metrics.
 
 
 
