--- a/hw4/hw4_jq2282.md
+++ b/hw4/hw4_jq2282.md
@@ -48,4 +48,6 @@ The Benefits ot BLEU are: it's automated, quick and inexpensive. It is reported 
 
 ### 2.6. How could we deal with unseen restaurant names?
 
- 
+I tested the unseen restaurant names as "Jings Malatang". The entire inputs are: ('name[Jings Malatang]','eatType[coffee shop]', 'priceRange[high]', 'area[city centre]', 'near[The Sorrento]'). The greedy decoder prediction is "The Mill is a coffee shop near The in in the city centre near The is" while the beam-search decoder predictions are "The Sorrento in the city centre which is a coffee shop.", "The Sorrento in the city centre which is a coffee shop that is a coffee shop with a high customer rating." and "The Sorrento in the city centre which is a coffee shop that is a coffee shop". From the result we could see, the model could not identify the unseen restaurant names as names, so it either took the common restaurant names in its training set or took the restaurant names from the "near" attribute.  
+
+So the issue here is how we build the connection between attribute "name" with its value in the brackets. We could add attention to the encoder. Or, we could do some mapping between the attribute and its values, which means we don't train the restaurant names themselves, we just use some symbols to represent this entity and replace the symbols to actual names after decoder output. 
