--- a/hw4/hw4_jq2282.md
+++ b/hw4/hw4_jq2282.md
@@ -44,6 +44,23 @@ The Benefits ot BLEU are: it's automated, quick and inexpensive. It is reported 
 
 ### 2.5. Pyramid scoring for diverse outputs.
 
+1. Two SCUs (weight = 3) are: 
+
+* The Cambridge Blue is family friendly,
+* The Cambridge Blue is a coffee shop.
+
+2. Two SCUs (weight = 2) are:
+
+* The Cambridge Blue is in the riverside area.
+* The Cambridge Blue is near Burger King.
+
+3. Two SCUs (weight = 1) are:
+
+* The Cambridge Blue is low-priced.
+* The Cambridge Blue provides Italian food.
+
+The Pyramid score is D/Max, which is the the sum of the weights of the SCUs in a summary divided by the sum of the weights of the SCUs in a ideally informative summary.  The generated sentence has 3 SCUs with weight = 3 : "The Cambridge Blue", "family-friendly" and "coffee shop", 2 SCUs with weight = 2: "near Burger King" and "at the riverside", so the D = 3\*3 + 2\*2 = 13. Other than the SCUs in the generated sentence, the ideally informative summary would also include 1 SCU with weight = 3: "average customer rating" and 2 SCUs with weight = 1: "low-priced" and "Italian food". So Max = 3\*4+2\*2 + 1\*2 = 18. So the Pyramid score for the generated sentence is 13/18. 
+
 
 
 ### 2.6. How could we deal with unseen restaurant names?
