--- a/hw4/hw4_jq2282.md
+++ b/hw4/hw4_jq2282.md
@@ -22,6 +22,28 @@ Here I use the greedy decoding on the developement dataset to do the error analy
 
 ### 2.3. Beam search analysis
 
+Example 1:
+
+('name[The Mill]', 'eatType[coffee shop]', 'food[Chinese]', 'priceRange[high]', 'area[city centre]', 'near[The Sorrento]') GREEDY PREDICT: <sos> The Mill is a coffee shop located near The located in the The Sorrento. <eos> 0.23801485533558359  BEAM PREDICT: <sos> The Mill is a coffee shop located in the city centre. <eos> 0.48394497834347944 <sos> The Mill is a coffee shop located in the city centre near The Sorrento. <eos> 0.7121408698238745 <sos> The Mill is a coffee shop that serves Chinese food. <eos> 0.4965853037914095
+
+
+
+('name[Fitzbillies]', 'eatType[coffee shop]', 'food[Chinese]', 'priceRange[£20-25]', 'customer rating[high]', 'area[riverside]', 'familyFriendly[no]') GREEDY PREDICT: <sos> Fitzbillies is a coffee shop in the city It the in the the city It a It is It is range It is and is not not a is friendly. <eos> 0.22667547112013808  BEAM PREDICT: <sos> Fitzbillies is a coffee shop in the customer rating is located in the city centre. <eos> 0.36356595284468696 <sos> Fitzbillies is a coffee shop with a customer rating is located in the city centre. <eos> 0.3094731899981711 <sos> Fitzbillies is a coffee shop in the customer rating is located in the city centre and is not child friendly. <eos> 0.4538738982375388
+
+How do the multiple outputs differ?
+
+
+
+No, beam search doesn't always include the greedily decoded output because I added the length penalty in the sequence likelihood. Hence the most likely word in greedy decoding may not beat other less likely words in the beam.
+
+Advantages of beam search: at each decoding step, beam search decoding cosses the top $k$ most likely sequences instead of the most likely sequence in the greedy decoding and hence  it has a broader search space than greedy and provides multiple output finally. Also, the beam size is a tunable parameter, which could be used to control the search process and get better result. 
+
+Disadvantanges of beam search: the beam search expands more space than the greedy decoding and hence it takes longer running time and larger space. Moreover, since it keeps beam-size number of best partial solutions as  candidates, the output could not be guaranteed to be optimal.
+
+
+
+
+
 
 
 ### 2.4. What's wrong with BLEU?
@@ -59,7 +81,9 @@ The Benefits ot BLEU are: it's automated, quick and inexpensive. It is reported 
 * The Cambridge Blue is low-priced.
 * The Cambridge Blue provides Italian food.
 
-The Pyramid score is D/Max, which is the the sum of the weights of the SCUs in a summary divided by the sum of the weights of the SCUs in a ideally informative summary.  The generated sentence has 3 SCUs with weight = 3 : "The Cambridge Blue", "family-friendly" and "coffee shop", 2 SCUs with weight = 2: "near Burger King" and "at the riverside", so the D = 3\*3 + 2\*2 = 13. Other than the SCUs in the generated sentence, the ideally informative summary would also include 1 SCU with weight = 3: "average customer rating" and 2 SCUs with weight = 1: "low-priced" and "Italian food". So Max = 3\*4+2\*2 + 1\*2 = 18. So the Pyramid score for the generated sentence is 13/18. 
+The Pyramid score is D/Max, which is the the sum of the weights of the SCUs in a summary divided by the sum of the weights of the SCUs in a ideally informative summary. Here "ideally informative summary" could be understood in multiple ways and I consider it as a summary that includes all SCUs in all reference summaries.
+
+The generated sentence has 3 SCUs with weight = 3 : "The Cambridge Blue", "family-friendly" and "coffee shop", 2 SCUs with weight = 2: "near Burger King" and "at the riverside", so the D = 3\*3 + 2\*2 = 13. Other than the SCUs in the generated sentence, the ideally informative summary would also include 1 SCU with weight = 3: "average customer rating" and 2 SCUs with weight = 1: "low-priced" and "Italian food". So Max = 3\*4+2\*2 + 1\*2 = 18. So the Pyramid score for the generated sentence is 13/18. 
 
 
 
@@ -68,3 +92,8 @@ The Pyramid score is D/Max, which is the the sum of the weights of the SCUs in a
 I tested the unseen restaurant names as "Jings Malatang". The entire inputs are: ('name[Jings Malatang]','eatType[coffee shop]', 'priceRange[high]', 'area[city centre]', 'near[The Sorrento]'). The greedy decoder prediction is "The Mill is a coffee shop near The in in the city centre near The is" while the beam-search decoder predictions are "The Sorrento in the city centre which is a coffee shop.", "The Sorrento in the city centre which is a coffee shop that is a coffee shop with a high customer rating." and "The Sorrento in the city centre which is a coffee shop that is a coffee shop". From the result we could see, the model could not identify the unseen restaurant names as names, so it either took the common restaurant names in its training set or took the restaurant names from the "near" attribute.  
 
 So the issue here is how we build the connection between attribute "name" with its value in the brackets. We could add attention to the encoder. Or, we could do some mapping between the attribute and its values, which means we don't train the restaurant names themselves, we just use some symbols to represent this entity and replace the symbols to actual names after decoder output. 
+
+
+
+### 2.7. What problems might occur in different languages?
+
