--- a/hw4/hw4_jq2282.md
+++ b/hw4/hw4_jq2282.md
@@ -30,6 +30,8 @@ Example 1:
 
 ('name[Fitzbillies]', 'eatType[coffee shop]', 'food[Chinese]', 'priceRange[£20-25]', 'customer rating[high]', 'area[riverside]', 'familyFriendly[no]') GREEDY PREDICT: <sos> Fitzbillies is a coffee shop in the city It the in the the city It a It is It is range It is and is not not a is friendly. <eos> 0.22667547112013808  BEAM PREDICT: <sos> Fitzbillies is a coffee shop in the customer rating is located in the city centre. <eos> 0.36356595284468696 <sos> Fitzbillies is a coffee shop with a customer rating is located in the city centre. <eos> 0.3094731899981711 <sos> Fitzbillies is a coffee shop in the customer rating is located in the city centre and is not child friendly. <eos> 0.4538738982375388
 
+('name[The Wrestlers]', 'eatType[coffee shop]', 'food[Chinese]', 'priceRange[less than £20]', 'area[riverside]', 'familyFriendly[no]', 'near[Raja Indian Cuisine]') GREEDY PREDICT: <sos> The Wrestlers is a family friendly coffee shop located near Raja Indian Cuisine. It is in the city centre. <eos> 0.1908345380707581  BEAM PREDICT: <sos> Near Raja Indian coffee shop that is not family friendly. <eos> 0.13746786361638214 <sos> Near Raja Indian coffee shop that is not family friendly. It is located in the city centre of the <eos> 0.38483265444233633 <sos> Near Raja Indian coffee shop that is not family friendly. It is located in the riverside and is The Punter <eos> 0.4721184338144005
+
 How do the multiple outputs differ?
 
 
