--- a/hw4/hw4_jq2282.md
+++ b/hw4/hw4_jq2282.md
@@ -22,15 +22,53 @@ Here I use the greedy decoding on the developement dataset to do the error analy
 
 ### 2.3. Beam search analysis
 
-Example 1:
+**Example 1:**
 
-('name[The Mill]', 'eatType[coffee shop]', 'food[Chinese]', 'priceRange[high]', 'area[city centre]', 'near[The Sorrento]') GREEDY PREDICT: <sos> The Mill is a coffee shop located near The located in the The Sorrento. <eos> 0.23801485533558359  BEAM PREDICT: <sos> The Mill is a coffee shop located in the city centre. <eos> 0.48394497834347944 <sos> The Mill is a coffee shop located in the city centre near The Sorrento. <eos> 0.7121408698238745 <sos> The Mill is a coffee shop that serves Chinese food. <eos> 0.4965853037914095
+**Input sequence:** ('name[The Punter]', 'eatType[coffee shop]', 'food[English]', 'priceRange[cheap]', 'customer rating[5 out of 5]', 'familyFriendly[no]', 'near[Café Sicilia]') 
+
+**Greedy decoder prediction:** " <sos> The Punter is a cheap coffee shop near Café Sicilia. It is is 5 out of 5 and is not family-friendly. <eos>" with BLEU score: 0.34.  
+
+**Beam search decoder prediction:**
+
+" <sos> There is a cheap coffee shop called The Punter located near Café Sicilia. It serves English food and is not family-friendly. 5 out of 5 and is not family-friendly. <eos> with BLEU score 0.57. 
+
+"<sos> There is a cheap coffee shop called The Punter located near Café Sicilia. It serves English food and is rated 5 out of 5 by customers. <eos>" with BLEU score  0.57.
+
+"<sos> There is a cheap coffee shop called The Punter located near Café Sicilia. It serves English food and is rated 5 out of 5. <eos>" with BLEU score 0.56.
+
+**Analysis: ** 
+
+**Example 2:**
+
+**Input sequence:** ('name[The Golden Palace]', 'eatType[coffee shop]', 'food[English]', 'priceRange[£20-25]', 'customer rating[high]', 'area[city centre]')
+
+**Greedy decoder prediction:** " <sos> The Golden Palace is a coffee shop in the city city centre. It a city centre. It is It is is and is <eos>" with BLEU score: 0.25  
+
+**Beam search decoder prediction:**
+
+" <sos> In the city centre, The Golden Palace is a highly rated coffee shop that serves English food. <eos>" with BLEU score 0.49. 
+
+"<sos> In the city centre, The Golden Palace is a highly rated coffee shop that serves English food. It is located in the city centre. <eos>" with BLEU score  0.53.
+
+"<sos> In the city centre, The Golden Palace is a highly rated coffee shop that serves English food. It is located in the city centre and is rated highly by customers. <eos>" with BLEU score 0.4.
+
+**Example 3:**
+
+**Input sequence:** ('name[Fitzbillies]', 'eatType[coffee shop]', 'food[English]', 'priceRange[moderate]', 'customer rating[1 out of 5]', 'area[riverside]', 'familyFriendly[no]')
+
+**Greedy decoder prediction:** " <sos> Fitzbillies is a moderately priced coffee shop in the city centre. It is the of the is and is not It is is of <eos>" with BLEU score: 0.3  
+
+**Beam search decoder prediction:**
+
+" <sos> There is a moderately priced coffee shop serving English food in the riverside area named The Wrestlers. It is moderately priced and is rated 1 out of 5 by customers. <eos> with BLEU score 0.46. 
+
+"<sos> There is a moderately priced coffee shop serving English food in the riverside area named The Wrestlers. It is moderately priced and is rated 1 out of 5 and is not child friendly. <eos>" with BLEU score  0.52.
+
+"<sos> There is a moderately priced coffee shop serving English food in the riverside area named The Wrestlers. It is moderately priced and is rated 1 out of 5 and is not family-friendly. <eos>" with BLEU score 0.53.
 
 
 
-('name[Fitzbillies]', 'eatType[coffee shop]', 'food[Chinese]', 'priceRange[£20-25]', 'customer rating[high]', 'area[riverside]', 'familyFriendly[no]') GREEDY PREDICT: <sos> Fitzbillies is a coffee shop in the city It the in the the city It a It is It is range It is and is not not a is friendly. <eos> 0.22667547112013808  BEAM PREDICT: <sos> Fitzbillies is a coffee shop in the customer rating is located in the city centre. <eos> 0.36356595284468696 <sos> Fitzbillies is a coffee shop with a customer rating is located in the city centre. <eos> 0.3094731899981711 <sos> Fitzbillies is a coffee shop in the customer rating is located in the city centre and is not child friendly. <eos> 0.4538738982375388
 
-('name[The Wrestlers]', 'eatType[coffee shop]', 'food[Chinese]', 'priceRange[less than £20]', 'area[riverside]', 'familyFriendly[no]', 'near[Raja Indian Cuisine]') GREEDY PREDICT: <sos> The Wrestlers is a family friendly coffee shop located near Raja Indian Cuisine. It is in the city centre. <eos> 0.1908345380707581  BEAM PREDICT: <sos> Near Raja Indian coffee shop that is not family friendly. <eos> 0.13746786361638214 <sos> Near Raja Indian coffee shop that is not family friendly. It is located in the city centre of the <eos> 0.38483265444233633 <sos> Near Raja Indian coffee shop that is not family friendly. It is located in the riverside and is The Punter <eos> 0.4721184338144005
 
 How do the multiple outputs differ?
 
@@ -70,18 +108,18 @@ The Benefits ot BLEU are: it's automated, quick and inexpensive. It is reported 
 
 1. Two SCUs (weight = 3) are: 
 
-* The Cambridge Blue is family friendly,
-* The Cambridge Blue is a coffee shop.
+* It is family friendly,
+* It is a coffee shop.
 
 2. Two SCUs (weight = 2) are:
 
-* The Cambridge Blue is in the riverside area.
-* The Cambridge Blue is near Burger King.
+* It is in the riverside area.
+* It is near Burger King.
 
 3. Two SCUs (weight = 1) are:
 
-* The Cambridge Blue is low-priced.
-* The Cambridge Blue provides Italian food.
+* It is low-priced.
+* It provides Italian food.
 
 The Pyramid score is D/Max, which is the the sum of the weights of the SCUs in a summary divided by the sum of the weights of the SCUs in a ideally informative summary. Here "ideally informative summary" could be understood in multiple ways and I consider it as a summary that includes all SCUs in all reference summaries.
 
@@ -91,7 +129,19 @@ The generated sentence has 3 SCUs with weight = 3 : "The Cambridge Blue", "famil
 
 ### 2.6. How could we deal with unseen restaurant names?
 
-I tested the unseen restaurant names as "Jings Malatang". The entire inputs are: ('name[Jings Malatang]','eatType[coffee shop]', 'priceRange[high]', 'area[city centre]', 'near[The Sorrento]'). The greedy decoder prediction is "The Mill is a coffee shop near The in in the city centre near The is" while the beam-search decoder predictions are "The Sorrento in the city centre which is a coffee shop.", "The Sorrento in the city centre which is a coffee shop that is a coffee shop with a high customer rating." and "The Sorrento in the city centre which is a coffee shop that is a coffee shop". From the result we could see, the model could not identify the unseen restaurant names as names, so it either took the common restaurant names in its training set or took the restaurant names from the "near" attribute.  
+I tested the unseen restaurant names as "Jings Malatang". 
+
+The entire inputs are: ('name[Jings Malatang]','eatType[coffee shop]', 'priceRange[high]', 'area[city centre]', 'near[The Sorrento]'). 
+
+The greedy decoder prediction is: "The Mill is a coffee shop near The in in the city centre near The is" while the beam-search decoder predictions are:
+
+"The Sorrento in the city centre which is a coffee shop.", 
+
+"The Sorrento in the city centre which is a coffee shop that is a coffee shop with a high customer rating." 
+
+"The Sorrento in the city centre which is a coffee shop that is a coffee shop". 
+
+From the result we could see, the model could not identify the unseen restaurant names as names, so it either took the common restaurant names in its training set or took the restaurant names from the "near" attribute.  
 
 So the issue here is how we build the connection between attribute "name" with its value in the brackets. We could add attention to the encoder. Or, we could do some mapping between the attribute and its values, which means we don't train the restaurant names themselves, we just use some symbols to represent this entity and replace the symbols to actual names after decoder output. 
 
