--- a/hw4/hw4_jq2282.md
+++ b/hw4/hw4_jq2282.md
@@ -2,6 +2,8 @@
 
 #### Jing Qian (jq2282)
 
+Dear instructors, I want to use **2 late days** for this homework.
+
 ### 2.1. Model architecture
 
 ![Screen Shot 2019-12-06 at 2.26.28 AM](/Users/mac/Desktop/NLP/hw4/Screen Shot 2019-12-06 at 2.26.28 AM.png)
